Fixed ValidatedInput so user cannot submit unless it's validated while also allowing for delaying showing validation error til the input is blurred (showErrOnBlur)

--- a/src/app.css
+++ b/src/app.css
@@ -122,13 +122,13 @@ button:disabled {
   color: inherit;
 }
 		
-.wait > * {
+.wait .will-wait {
   position: relative;
   overflow: hidden;
   z-index: 1 !important;
 }
 
-.wait > *::before, .wait > *::after {
+.wait .will-wait::before, .wait .will-wait::after {
   content: '';
   position: absolute;
   top: 0 !important; left: 0 !important;
@@ -139,11 +139,11 @@ button:disabled {
   transform: initial !important;
 }
 
-.wait > *::before {
+.wait .will-wait::before {
   background-color: var(--clr__dk-layer-low) !important;
 }
 
-.wait > *::after {
+.wait .will-wait::after {
   background: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(255, 255, 255, .7) 90%);
   box-shadow: 6px 0 6px rgba(255, 255, 225, .7);
   animation: waiting 3s linear infinite;
